@@ -1,5 +1,5 @@
 // Copyright (C) 2005 Nathaniel Smith <njs@pobox.com>
-//               2008 Stephen Leake <stephen_leake@stephe-leake.org>
+//               2008, 2009 Stephen Leake <stephen_leake@stephe-leake.org>
 //
 // This program is made available under the GNU GPL version 2.0 or
 // greater. See the accompanying file COPYING for details.
@@ -1479,9 +1479,9 @@ namespace resolve_conflicts
   }
 }
 
-static char const * const conflicts_mismatch_msg = "conflicts file does not match current conflicts";
-static char const * const conflict_resolution_not_supported_msg = "%s is not a supported conflict resolution for %s";
-static char const * const conflict_extra = "extra chars at end of conflict";
+static char const * const conflicts_mismatch_msg = N_("conflicts file does not match current conflicts");
+static char const * const conflict_resolution_not_supported_msg = N_("%s is not a supported conflict resolution for %s");
+static char const * const conflict_extra = N_("extra chars at end of conflict");
 
 static void
 read_missing_root_conflicts(basic_io::parser & pars,
